DigicielFull/force-app/main/default/objects/Case/fields/Additional_Comments_or_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments_or_Feedback__c</fullName>
    <label>Additional Comments or Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>