DigicielFull/force-app/main/default/objects/Case/fields/Additional_Comments_or_Feedback_needed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments_or_Feedback_needed__c</fullName>
    <label>Additional Comments or Feedback needed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>- No Response -</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>