DigicielFull/force-app/main/default/objects/Case/fields/amc__Action__c.field-meta.xml
<CustomField>
    <fullName>amc__Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Action this Case relates to</inlineHelpText>
    <label>Action</label>
    <referenceTo>amc__Action__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>