DigicielFull/force-app/main/default/objects/Case/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approval Rejected</fullName>
            </value>
            <value>
                <fullName>Case Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>