DigicielFull/force-app/main/default/objects/Case/fields/Are_all_locations_affected__c.field-meta.xml
<CustomField>
    <fullName>Are_all_locations_affected__c</fullName>
    <label>Are all locations affected?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>