DigicielFull/force-app/main/default/objects/Case/fields/Billing_Customer_ID_BAN__c.field-meta.xml
<CustomField>
    <fullName>Billing_Customer_ID_BAN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Customer ID/BAN</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BAN__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BAN__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>