DigicielFull/force-app/main/default/objects/Case/fields/Capacity_Mbps__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Mbps__c</fullName>
    <label>Capacity (Mbps)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>