DigicielFull/force-app/main/default/objects/Case/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PNG_CaseType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Payments &amp; Invoicing</fullName>
            </value>
            <value>
                <fullName>Service Provisioning</fullName>
            </value>
            <value>
                <fullName>Digicel Internal</fullName>
            </value>
            <value>
                <fullName>Queries &amp; Reports</fullName>
            </value>
            <value>
                <fullName>New Customer (ICT)</fullName>
            </value>
            <value>
                <fullName>Change Request (ICT)</fullName>
            </value>
            <value>
                <fullName>Payments &amp; Invoicing (ICT)</fullName>
            </value>
            <value>
                <fullName>Service Provisioning (ICT)</fullName>
            </value>
            <value>
                <fullName>Digicel Internal (ICT)</fullName>
            </value>
            <value>
                <fullName>Queries &amp; Reports (ICT)</fullName>
            </value>
            <value>
                <fullName>Accounts (TV)</fullName>
            </value>
            <value>
                <fullName>Billing (TV)</fullName>
            </value>
            <value>
                <fullName>Others (TV)</fullName>
            </value>
            <value>
                <fullName>Reception (TV)</fullName>
            </value>
            <value>
                <fullName>Sales (TV)</fullName>
            </value>
            <value>
                <fullName>Services (TV)</fullName>
            </value>
            <value>
                <fullName>New Customer (GSM)</fullName>
            </value>
            <value>
                <fullName>Change Request (GSM)</fullName>
            </value>
            <value>
                <fullName>Payments &amp; Invoicing (GSM)</fullName>
            </value>
            <value>
                <fullName>Service Provisioning (GSM)</fullName>
            </value>
            <value>
                <fullName>Digicel Internal (GSM)</fullName>
            </value>
            <value>
                <fullName>Queries &amp; Reports (GSM)</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Servers</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>--None--</fullName>
                <isActive>false</isActive>
                <label>--None--</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>