DigicielFull/force-app/main/default/objects/Case/fields/Case_Closure_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Closure_Status__c</fullName>
    <label>Case Closure Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Duplicate Case</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>