DigicielFull/force-app/main/default/objects/Case/fields/Case_Comment_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Case_Comment_Time_Stamp__c</fullName>
    <label>Case Comment Time Stamp</label>
    <type>DateTime</type>
</CustomField>