DigicielFull/force-app/main/default/objects/Case/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>zDepracated - Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>PIC Request- TBI</fullName>
            </value>
            <value>
                <fullName>PIC Request- LINK</fullName>
            </value>
            <value>
                <fullName>Invoice Request</fullName>
            </value>
            <value>
                <fullName>Account Transfer Request</fullName>
            </value>
            <value>
                <fullName>Account Adjustment- Name Change</fullName>
            </value>
            <value>
                <fullName>Account Adjustment- Billing Address Change</fullName>
            </value>
            <value>
                <fullName>Account Adjustment- Payment Method</fullName>
            </value>
            <value>
                <fullName>Account Adjustment- General</fullName>
            </value>
            <value>
                <fullName>Audit Request</fullName>
            </value>
            <value>
                <fullName>New Activation- Voice</fullName>
            </value>
            <value>
                <fullName>New Activation- Voice &amp; Data</fullName>
            </value>
            <value>
                <fullName>New Activation- MBB</fullName>
            </value>
            <value>
                <fullName>New Activation- ILD</fullName>
            </value>
            <value>
                <fullName>New Activation- All Services, Voice, Data &amp; ILD</fullName>
            </value>
            <value>
                <fullName>New Activation + Device- Voice</fullName>
            </value>
            <value>
                <fullName>New Activation + Device- Voice &amp; Data</fullName>
            </value>
            <value>
                <fullName>New Activation + Device- MBB</fullName>
            </value>
            <value>
                <fullName>New Activation + Device- All Services, Voice, Data &amp; ILD New Activation- Voice</fullName>
            </value>
            <value>
                <fullName>Re-Activation- Voice &amp; Data</fullName>
            </value>
            <value>
                <fullName>Re-Activation- MBB</fullName>
            </value>
            <value>
                <fullName>Re-Activation- ILD</fullName>
            </value>
            <value>
                <fullName>Re-Activation- All Services, Voice, Data &amp; ILD</fullName>
            </value>
            <value>
                <fullName>Re-Activation + Device- Voice</fullName>
            </value>
            <value>
                <fullName>Re-Activation + Device- Voice &amp; Data</fullName>
            </value>
            <value>
                <fullName>Re-Activation + Device- MBB</fullName>
            </value>
            <value>
                <fullName>Re-Activation + Device- All Services, Voice, Data &amp; ILD</fullName>
            </value>
            <value>
                <fullName>Rate Plan Change- Service Removal</fullName>
            </value>
            <value>
                <fullName>Rate Plan Change- Plan Adjustments</fullName>
            </value>
            <value>
                <fullName>SIM Request- Lost</fullName>
            </value>
            <value>
                <fullName>SIM Request- Stolen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>