DigicielFull/force-app/main/default/objects/Case/fields/Case_Request_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Request_Sub_Type__c</fullName>
    <label>Case Request Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Request_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Change Postpaid to Prepaid</fullName>
            </value>
            <value>
                <fullName>Account Manager to Liaise with Client</fullName>
            </value>
            <value>
                <fullName>Account Reconciliation|Subscription Credit/Debit Payment Migration</fullName>
            </value>
            <value>
                <fullName>Account Status</fullName>
            </value>
            <value>
                <fullName>Account Suspension</fullName>
            </value>
            <value>
                <fullName>Account Suspension (Bulk)</fullName>
            </value>
            <value>
                <fullName>Account Update</fullName>
            </value>
            <value>
                <fullName>Adjustment Type Reversal</fullName>
            </value>
            <value>
                <fullName>Airtime Extension</fullName>
            </value>
            <value>
                <fullName>Balance Synchronization</fullName>
            </value>
            <value>
                <fullName>Bank Call</fullName>
            </value>
            <value>
                <fullName>Bill Dispute</fullName>
            </value>
            <value>
                <fullName>Bill Payment</fullName>
            </value>
            <value>
                <fullName>Blackberry Service Removal</fullName>
            </value>
            <value>
                <fullName>Both Temporary Credit Increment &amp; Monthly Usage Reset</fullName>
            </value>
            <value>
                <fullName>Bulk Disabling Service: Easipay,Creditu,Nasfund And Newcomm</fullName>
            </value>
            <value>
                <fullName>Bulk Enabling Service: Easipay,Creditu, Nasfund And Newcomm</fullName>
            </value>
            <value>
                <fullName>Bulk SMS Related</fullName>
            </value>
            <value>
                <fullName>Calls Dropping</fullName>
            </value>
            <value>
                <fullName>Calls Report</fullName>
            </value>
            <value>
                <fullName>Charges Summary Breakup</fullName>
            </value>
            <value>
                <fullName>Credit/Data Reversals</fullName>
            </value>
            <value>
                <fullName>Credit/Debit Write Off Report</fullName>
            </value>
            <value>
                <fullName>Credit Dispute</fullName>
            </value>
            <value>
                <fullName>Credit Note</fullName>
            </value>
            <value>
                <fullName>Credit Note - Digicel Sponsored Account</fullName>
            </value>
            <value>
                <fullName>Credit Note - Documentation Delay</fullName>
            </value>
            <value>
                <fullName>Credit Note - Other Charges Dispute</fullName>
            </value>
            <value>
                <fullName>Credit Note - Recurring Charge Dispute</fullName>
            </value>
            <value>
                <fullName>Credit Note - SIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>