DigicielFull/force-app/main/default/objects/Case/fields/Case_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Request_Type__c</fullName>
    <label>Case Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Information</fullName>
            </value>
            <value>
                <fullName>Activation</fullName>
            </value>
            <value>
                <fullName>Add/Remove Services</fullName>
            </value>
            <value>
                <fullName>Data Usage</fullName>
            </value>
            <value>
                <fullName>Digicel Internal</fullName>
            </value>
            <value>
                <fullName>Invoicing</fullName>
            </value>
            <value>
                <fullName>No Service</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Quotation Request</fullName>
            </value>
            <value>
                <fullName>Restoration/Renewal</fullName>
            </value>
            <value>
                <fullName>Roaming</fullName>
            </value>
            <value>
                <fullName>Service Issues</fullName>
            </value>
            <value>
                <fullName>Service Quality</fullName>
            </value>
            <value>
                <fullName>Site Survey</fullName>
            </value>
            <value>
                <fullName>Suspension/Termination</fullName>
            </value>
            <value>
                <fullName>Usage Reports</fullName>
            </value>
            <value>
                <fullName>Installation Update Request</fullName>
            </value>
            <value>
                <fullName>Internal Requests</fullName>
            </value>
            <value>
                <fullName>Account Credit/Debit (TV)</fullName>
            </value>
            <value>
                <fullName>Activation of Service (TV)</fullName>
            </value>
            <value>
                <fullName>Additional Decoder/Play Box (TV)</fullName>
            </value>
            <value>
                <fullName>Bill Dispute (TV)</fullName>
            </value>
            <value>
                <fullName>Cash Payment (TV)</fullName>
            </value>
            <value>
                <fullName>Channel Line Up (TV)</fullName>
            </value>
            <value>
                <fullName>Cheque Payment (TV)</fullName>
            </value>
            <value>
                <fullName>Client acknowledged email (TV)</fullName>
            </value>
            <value>
                <fullName>Confirm Payment (TV)</fullName>
            </value>
            <value>
                <fullName>Disconnection of Service - Temporary (TV)</fullName>
            </value>
            <value>
                <fullName>Disputing Balance (TV)</fullName>
            </value>
            <value>
                <fullName>Eftpos Payment (TV)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>