DigicielFull/force-app/main/default/objects/Case/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>Text(Opportunity__r.City2__c)</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>