DigicielFull/force-app/main/default/objects/Case/fields/City_Town_Suburb__c.field-meta.xml
<CustomField>
    <fullName>City_Town_Suburb__c</fullName>
    <label>City / Town / Suburb</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Province__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arawa-Kieta</fullName>
            </value>
            <value>
                <fullName>Buin</fullName>
            </value>
            <value>
                <fullName>Buka</fullName>
            </value>
            <value>
                <fullName>Abau</fullName>
            </value>
            <value>
                <fullName>Bereina</fullName>
            </value>
            <value>
                <fullName>Kwikila</fullName>
            </value>
            <value>
                <fullName>Tapini</fullName>
            </value>
            <value>
                <fullName>Chuave</fullName>
            </value>
            <value>
                <fullName>Gumine</fullName>
            </value>
            <value>
                <fullName>Karimui</fullName>
            </value>
            <value>
                <fullName>Kerowagi</fullName>
            </value>
            <value>
                <fullName>Kundiawa</fullName>
            </value>
            <value>
                <fullName>Yonggomugl</fullName>
            </value>
            <value>
                <fullName>Kerevat</fullName>
            </value>
            <value>
                <fullName>Kokopo</fullName>
            </value>
            <value>
                <fullName>Pomio</fullName>
            </value>
            <value>
                <fullName>Rabaul</fullName>
            </value>
            <value>
                <fullName>Ambunti</fullName>
            </value>
            <value>
                <fullName>Angoram</fullName>
            </value>
            <value>
                <fullName>Maprik</fullName>
            </value>
            <value>
                <fullName>Wewak</fullName>
            </value>
            <value>
                <fullName>Wosera</fullName>
            </value>
            <value>
                <fullName>Yangoru</fullName>
            </value>
            <value>
                <fullName>Asaro</fullName>
            </value>
            <value>
                <fullName>Benna</fullName>
            </value>
            <value>
                <fullName>Goroka</fullName>
            </value>
            <value>
                <fullName>Henganofi</fullName>
            </value>
            <value>
                <fullName>Kainantu</fullName>
            </value>
            <value>
                <fullName>Lamari</fullName>
            </value>
            <value>
                <fullName>Lufa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>