DigicielFull/force-app/main/default/objects/Case/fields/Contact_s_Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Email_Domain__c</fullName>
    <formula>SUBSTITUTE(SuppliedEmail, LEFT(SuppliedEmail, FIND(&quot;@&quot;, SuppliedEmail)), &quot;&quot;)</formula>
    <label>Contact&apos;s Email Domain</label>
    <type>Text</type>
</CustomField>