DigicielFull/force-app/main/default/objects/Case/fields/Contract_Sighted__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sighted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark this only if Contract is attached and verified.</inlineHelpText>
    <label>Contract Sighted?</label>
    <type>Checkbox</type>
</CustomField>