DigicielFull/force-app/main/default/objects/Case/fields/Creator_Market_Name__c.field-meta.xml
<CustomField>
    <fullName>Creator_Market_Name__c</fullName>
    <description>Created so that Cases can be reported on by the record creators role in the system</description>
    <formula>TEXT(CreatedBy.Digicel_Country__c)</formula>
    <inlineHelpText>This field displays the role of the record creator</inlineHelpText>
    <label>Creator Market Name</label>
    <type>Text</type>
</CustomField>