DigicielFull/force-app/main/default/objects/Case/fields/Customer_experience_is_Fair_or_Poor__c.field-meta.xml
<CustomField>
    <fullName>Customer_experience_is_Fair_or_Poor__c</fullName>
    <label>Customer experience is Fair or Poor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>