DigicielFull/force-app/main/default/objects/Case/fields/Customer_Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Handover_Date__c</fullName>
    <description>Created for the Service Operations Center Team in Trinidad</description>
    <inlineHelpText>Date Service is handed over to customer</inlineHelpText>
    <label>Customer Handover Date</label>
    <type>Date</type>
</CustomField>