DigicielFull/force-app/main/default/objects/Case/fields/Equipment_Hardware_Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Hardware_Dispatch_Date__c</fullName>
    <label>Equipment/Hardware Dispatch Date</label>
    <type>Date</type>
</CustomField>