DigicielFull/force-app/main/default/objects/Case/fields/Equipment_Hardware_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Hardware_Received_Date__c</fullName>
    <label>Equipment/Hardware Received Date</label>
    <type>Date</type>
</CustomField>