DigicielFull/force-app/main/default/objects/Case/fields/Escalate_to_Tier_2_Support__c.field-meta.xml
<CustomField>
    <fullName>Escalate_to_Tier_2_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalate to Tier 2 Support</label>
    <type>Checkbox</type>
</CustomField>