DigicielFull/force-app/main/default/objects/Case/fields/Existing_User_to_Clone__c.field-meta.xml
<CustomField>
    <fullName>Existing_User_to_Clone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing User to Clone</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>