DigicielFull/force-app/main/default/objects/Case/fields/FORMULA_Contact_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_Contact_Mobile_Phone__c</fullName>
    <formula>Contact.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mobile Phone</label>
    <type>Text</type>
</CustomField>