DigicielFull/force-app/main/default/objects/Case/fields/FR_Sent_By__c.field-meta.xml
<CustomField>
    <fullName>FR_Sent_By__c</fullName>
    <label>FR Sent By</label>
    <type>TextArea</type>
</CustomField>