DigicielFull/force-app/main/default/objects/Case/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>Created for the Service Operations Center Team in Trinidad</description>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICT - Field</fullName>
            </value>
            <value>
                <fullName>ICT - Core</fullName>
            </value>
            <value>
                <fullName>ICT - Implementation</fullName>
            </value>
            <value>
                <fullName>ICT - Support Operations Center</fullName>
            </value>
            <value>
                <fullName>ICT  - Contractors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>