DigicielFull/force-app/main/default/objects/Case/fields/ICT_Service_MRR__c.field-meta.xml
<CustomField>
    <fullName>ICT_Service_MRR__c</fullName>
    <label>ICT Service MRR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>