DigicielFull/force-app/main/default/objects/Case/fields/If_Query_resolved_is_No_why__c.field-meta.xml
<CustomField>
    <fullName>If_Query_resolved_is_No_why__c</fullName>
    <label>If Query resolved is No why?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>