DigicielFull/force-app/main/default/objects/Case/fields/Installation_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Installation_Address_Line_2__c</fullName>
    <formula>Opportunity__r.Street_2__c</formula>
    <label>Installation Address Line 2</label>
    <type>Text</type>
</CustomField>