DigicielFull/force-app/main/default/objects/Case/fields/Internal_Support_Category__c.field-meta.xml
<CustomField>
    <fullName>Internal_Support_Category__c</fullName>
    <description>**Do not modify without speaking with Tony Kenny** 

This field is used to track SFDC cases being assigned to the Champion network</description>
    <inlineHelpText>The Internal Support Category is used to determine the functional area of Salesforce that you want to associate your request</inlineHelpText>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Internal_Support_Group__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Create New User</fullName>
            </value>
            <value>
                <fullName>Email Notifications</fullName>
            </value>
            <value>
                <fullName>Password Reset</fullName>
            </value>
            <value>
                <fullName>Deactivate User</fullName>
            </value>
            <value>
                <fullName>Workflow Rule</fullName>
            </value>
            <value>
                <fullName>System Close-Off</fullName>
            </value>
            <value>
                <fullName>Access request</fullName>
            </value>
            <value>
                <fullName>Add New Product(s)</fullName>
            </value>
            <value>
                <fullName>Add User</fullName>
            </value>
            <value>
                <fullName>Adjust User Profile</fullName>
            </value>
            <value>
                <fullName>Dashboard Creation</fullName>
            </value>
            <value>
                <fullName>Data export request</fullName>
            </value>
            <value>
                <fullName>Edit Existing Price(s)</fullName>
            </value>
            <value>
                <fullName>Edit Existing Product(s)</fullName>
            </value>
            <value>
                <fullName>Error Message</fullName>
            </value>
            <value>
                <fullName>Field Creation</fullName>
            </value>
            <value>
                <fullName>Individual record</fullName>
            </value>
            <value>
                <fullName>Mass edit/create/delete</fullName>
            </value>
            <value>
                <fullName>New Picklist Value</fullName>
            </value>
            <value>
                <fullName>Permission Issue</fullName>
            </value>
            <value>
                <fullName>Remove User</fullName>
            </value>
            <value>
                <fullName>Report Creation</fullName>
            </value>
            <value>
                <fullName>System Access Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>