DigicielFull/force-app/main/default/objects/Case/fields/Internal_Support_Group__c.field-meta.xml
<CustomField>
    <fullName>Internal_Support_Group__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bugs</fullName>
            </value>
            <value>
                <fullName>Users</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Record_Data</fullName>
                <label>Record / Data</label>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Market Approval Process</fullName>
            </value>
            <value>
                <fullName>Reports / Dashboards</fullName>
            </value>
            <value>
                <fullName>Data Cleanse</fullName>
                <isActive>false</isActive>
                <label>Data Cleanse</label>
            </value>
            <value>
                <fullName>Manage Users</fullName>
                <isActive>false</isActive>
                <label>Manage Users</label>
            </value>
            <value>
                <fullName>Vendor Systems</fullName>
                <isActive>false</isActive>
                <label>Vendor Systems</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>