DigicielFull/force-app/main/default/objects/Case/fields/Last_Mile_Access__c.field-meta.xml
<CustomField>
    <fullName>Last_Mile_Access__c</fullName>
    <description>Field was created for the TT SOC Team, DO NOT TOUCH</description>
    <label>Last Mile Access</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fibre Metro - E</fullName>
            </value>
            <value>
                <fullName>Fibre Metro - G</fullName>
            </value>
            <value>
                <fullName>Microwave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>