DigicielFull/force-app/main/default/objects/Case/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>This field records an 18 digit ID from a legacy system</description>
    <label>Legacy ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>