DigicielFull/force-app/main/default/objects/Case/fields/Link_to_Record__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Record__c</fullName>
    <description>This is the link to the opportunity, report, dashboard or error received in question.</description>
    <inlineHelpText>This is the link to the opportunity, report, dashboard or error received in question.</inlineHelpText>
    <label>Link to Record</label>
    <type>Url</type>
</CustomField>