DigicielFull/force-app/main/default/objects/Case/fields/Manager_to_Assign__c.field-meta.xml
<CustomField>
    <fullName>Manager_to_Assign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager to Assign</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>