DigicielFull/force-app/main/default/objects/Case/fields/Market_Name__c.field-meta.xml
<CustomField>
    <fullName>Market_Name__c</fullName>
    <formula>TEXT( CreatedBy.Digicel_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Name</label>
    <type>Text</type>
</CustomField>